Fix the spacing values

--- a/frontend/src/styles/base/_spacing.scss
+++ b/frontend/src/styles/base/_spacing.scss
@@ -5,15 +5,15 @@
 // ----------------------------------------------------------------------
   // #Spacing Values
 // ----------------------------------------------------------------------
-$space-xxxs: 0.25em;
-$space-xxs: 0.375em;
-$space-xs: 0.5em;
-$space-sm: 0.75em;
-$space-md: 1.25em;
-$space-lg: 2em;
-$space-xl: 3.25em;
-$space-xxl: 5.25em;
-$space-xxxl: 8.5em;
+$space-xxxs: 20px;
+$space-xxs: 40px;
+$space-xs: 60px;
+$space-sm: 80px;
+$space-md: 100px;
+$space-lg: 160px;
+$space-xl: 200px;
+$space-xxl: 240px;
+$space-xxxl: 280px;
 
 // ----------------------------------------------------------------------
   // #Default Values
